--- a/src/FamilyAlbum/appsettings.json
+++ b/src/FamilyAlbum/appsettings.json
@@ -3,7 +3,7 @@
     "InstrumentationKey": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FamilyAlbum-abaf733f-dd9f-43cd-b7f7-3850db52e92f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FamilyAlbum;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
